--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.6.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-paper": "^5.12.3"
+    "react-native-paper": "^5.12.3",
+    "react-native-picker-select": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
