--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-picker/picker": "^2.6.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.0.1"
   },
