--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^7.6.4",
     "@react-native-picker/picker": "^2.6.1",
     "axios": "^1.6.8",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-datepicker": "^1.7.2",
     "react-native-image-picker": "^7.1.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.0.1"
   },
