--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.3",
-    "react-native-picker-select": "^9.0.1"
+    "react-native-picker-select": "^9.0.1",
+    "react-native-toast-message": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
