--- a/package.json
+++ b/package.json
@@ -11,15 +11,22 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^7.6.4",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.6.1",
+    "@react-navigation/native": "^5.9.8",
+    "@react-navigation/stack": "^5.14.9",
     "axios": "^1.6.8",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-datepicker": "^1.7.2",
+    "react-native-gesture-handler": "^2.16.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.0.1",
+    "react-native-reanimated": "^3.8.1",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.31.1",
     "react-native-toast-message": "^2.2.0"
   },
   "devDependencies": {
